themes/codi-ng/static/css/style.css
body {
  padding: 0
}

.author {
  border: 1px solid gray;
  border-style: dotted;
  padding: 1rem;
}

article {
  font-family: Merriweather;
  line-height: 1.8;
  color: #222222;
  font-size: 1.2em;
}

/* Aligns the tag icon with the tag badges */
.list-tag {
  top: 0.15em;
  position: relative;
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
  font-family: PT Sans;
  font-weight: 700;
  color: #222;
}

nav > ul * { list-style: none;}

nav > ul > li * { 
  text-decoration: inherit;
  color: inherit;
}

nav > ul > li > a:hover,
nav > ul > li * a:hover {
  color: blue;
  cursor: pointer;
}

.dot:after {
  content: "\00B7";
  margin-left: 3px;
  margin-right: 3px;
}

a.no-style:link {
  text-decoration: inherit;
  color: inherit;
  cursor: pointer;
}

a.no-style:visited {
  text-decoration: inherit;
  color: inherit;
  cursor: pointer;
}

.inline-svg {
  display: inline-block;
  height: 1.15rem;
  width: 1.15rem;
  top: 0.15rem;
  position: relative;
}

.inline-svg  > svg {
  vertical-align: baseline !important;
}

.socials {
  display: flex; /* or inline-flex */
  flex-direction: row;
  justify-content: space-evenly;
  cursor: pointer;
  align-items: baseline;
}

.highlight > div {
  display: inline-block;
  padding: 1em 1em 1em 1em;
  box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
  border-radius: 7px;
  border: 2px solid black;
  width: 100%;
}

